# ModAssert

./: ChangeLog  Makefile.am  Makefile.in  Makefile.win  ModAssert-10.0.sln  ModAssert-10.0.vcxproj  ModAssert-7.1.sln  ModAssert-7.1.vcproj  ModAssert-8.0.sln  ModAssert-8.0.vcproj  ModAssert-9.0.sln  ModAssert-9.0.vcproj  ModAssert.cbp  ModAssert.dsp  ModAssert.dsw  ModAssert.workspace  README  README.md  _removeall  clean.bat  configure  configure.ac  htmlprod.bat  pdfprod.bat
GnuWin32/: dummy.hpp
Win32/: Makefile.win  ModAssertWin32-10.0.vcxproj  ModAssertWin32-7.1.vcproj  ModAssertWin32-8.0.vcproj  ModAssertWin32-9.0.vcproj  ModAssertWin32.cbp  ModAssertWin32.dsp  README
Win32/src/: Win32ComputerName.cpp  Win32CurrentDirectory.cpp  Win32DiskSpace.cpp  Win32Displayer.cpp  Win32Dlg.cpp  Win32Handler.cpp  Win32LastError.cpp  Win32MemoryStatus.cpp  Win32OSVersion.cpp  Win32ProcessId.cpp  Win32Processor.cpp  Win32TerminateMessage.cpp  Win32ThreadId.cpp  Win32Trace.cpp  Win32UserName.cpp  Win32WarningMessage.cpp
console/: COPYING  Makefile.in  Makefile.win  ModAssertConsole-10.0.vcxproj  ModAssertConsole-7.1.vcproj  ModAssertConsole-8.0.vcproj  ModAssertConsole-9.0.vcproj  ModAssertConsole.cbp  ModAssertConsole.dsp  README  configure
console/src/: consoledisplayer.cpp  consolehandler.cpp  consoleterminate.cpp  consolewarning.cpp
demos/Console/: DemoConsole-10.0.vcxproj  DemoConsole-7.1.vcproj  DemoConsole-8.0.vcproj  DemoConsole-9.0.vcproj  DemoConsole.cbp  DemoConsole.dsp  Makefile.am  Makefile.in  Makefile.win  NEWS  NoText.cpp  README  configure  configure.ac  main.cpp  otherfile.cpp
demos/LibInDLL/: DLLmain.cpp  DemoLibInDLL-10.0.vcxproj  DemoLibInDLL-7.1.vcproj  DemoLibInDLL-8.0.vcproj  DemoLibInDLL-9.0.vcproj  DemoLibInDLL.cbp  DemoLibInDLL.dsp  DemoLibInDLL_AssertionInExe-10.0.vcxproj  DemoLibInDLL_AssertionInExe-7.1.vcproj  DemoLibInDLL_AssertionInExe-8.0.vcproj  DemoLibInDLL_AssertionInExe-9.0.vcproj  DemoLibInDLL_AssertionInExe.cbp  DemoLibInDLL_AssertionInExe.dsp  export.hpp  main.cpp
demos/LibInExe/: DLLmain.cpp  DemoLibInExe-10.0.vcxproj  DemoLibInExe-7.1.vcproj  DemoLibInExe-8.0.vcproj  DemoLibInExe-9.0.vcproj  DemoLibInExe.cbp  DemoLibInExe.dsp  DemoLibInExe_AssertionInDLL.cbp  DemoLibInExe_AssertionInDll-10.0.vcxproj  DemoLibInExe_AssertionInDll-7.1.vcproj  DemoLibInExe_AssertionInDll-8.0.vcproj  DemoLibInExe_AssertionInDll-9.0.vcproj  DemoLibInExe_AssertionInDll.dsp  export.hpp  main.cpp
demos/MFC/: DemoMFC-10.0.vcxproj  DemoMFC-7.1.vcproj  DemoMFC-8.0.vcproj  DemoMFC-9.0.vcproj  DemoMFC.clw  DemoMFC.cpp  DemoMFC.dsp  DemoMFC.h  DemoMFC.rc  DemoMFCDlg.cpp  DemoMFCDlg.h  NoText.cpp  OtherFile.cpp  StdAfx.cpp  StdAfx.h  resource.h
demos/Win32/: DemoWin32-10.0.vcxproj  DemoWin32-7.1.vcproj  DemoWin32-8.0.vcproj  DemoWin32-9.0.vcproj  DemoWin32.cbp  DemoWin32.cpp  DemoWin32.dsp  DemoWin32.rc  DemoWin32_private.h  DemoWin32_private.rc  Examples.cpp  Examples.h  Makefile.win  NoText.cpp  StdAfx.cpp  resource.h
demos/WxWidgets/: AUTHORS  ChangeLog  DemoWx-10.0.vcxproj  DemoWx-7.1.vcproj  DemoWx-8.0.vcproj  DemoWx-9.0.vcproj  DemoWx.dsp  DemoWxApp.cpp  DemoWxApp.h  DemoWxDlg.cpp  DemoWxDlg.h  Makefile.am  Makefile.in  ModAssertWx.xpm  ModAssertWx32x32.xpm  README  configure  configure.ac  notext.cpp
doc/: ar01s02.html  ar01s03.html  ar01s04.html  ar01s05.html  ar01s06.html  ar01s07.html  ar01s08.html  ar01s09.html  ar01s10.html  ar01s11.html  ar01s12.html  ar01s13.html  ar01s14.html  ar01s15.html  ar01s16.html  ar01s17.html  ar01s18.html  ar01s19.html  ar01s20.html  ar01s21.html  ar01s22.html  ar01s23.html  control.xml  extra.xml  handling.xml  index.html  intro.xml  ix01.html  macros.xml  modassert.xml  style.css
include/: Makefile.am  Makefile.in  README  configure  configure.ac
include/modassert/: Win32ComputerName.hpp  Win32CurrentDirectory.hpp  Win32DiskSpace.hpp  Win32Displayer.hpp  Win32Dlg.hpp  Win32Handler.hpp  Win32LastError.hpp  Win32MemoryStatus.hpp  Win32OSVersion.hpp  Win32ProcessId.hpp  Win32Processor.hpp  Win32TerminateMessage.hpp  Win32ThreadId.hpp  Win32Trace.hpp  Win32UserName.hpp  Win32WarningMessage.hpp  appinfo.hpp  assert.hpp  assertd.hpp  auto_link.hpp  autoresponder.hpp  categories.hpp  category.hpp  categorybase.hpp  combine_groups.hpp  config.hpp  consoledisplayer.hpp  consolehandler.hpp  consoleterminate.hpp  consolewarning.hpp  context.hpp  filters.hpp  group.hpp  grouplst.hpp  handler.hpp  hold_ref.hpp  hook.hpp  ifsuccess.hpp  info.hpp  infostore.hpp  (+36 more)
src/: appinfo.cpp  categories.cpp  context.cpp  filters.cpp  handler.cpp  ifsuccess.cpp  info.cpp  infostore.cpp  infouser.cpp  levels.cpp  logger.cpp  parmlist.cpp  responder_switcher.cpp  strmlog.cpp  terminate_message.cpp  threads.cpp  timeinfo.cpp  use_bool.cpp  warning_message.cpp
test/common/: CreateList.h  GetStreamString.h  ModAssertTest.cpp  ModAssertTest.h  ScopedSetReturnValue.h  StubHook.h  StubLogger.h  main.cpp
test/main/: Makefile.win  TestAllowResponses.cpp  TestAssert.cpp  TestAssert1DefaultParam.cpp  TestAssert2DefaultParams.cpp  TestAssertD.cpp  TestAssertDontReportFile.cpp  TestAssertInIf.cpp  TestAssertLevel1.cpp  TestAssertLevel3.cpp  TestAssertLevel3Check.cpp  TestAssertLogger.cpp  TestAssertOffCheckOff.cpp  TestAssertOffCheckOn.cpp  TestAssertOnCheckOff.cpp  TestAssertOnCheckOn.cpp  TestAssertReportFile.cpp  TestCheck.cpp  TestCheck1DefaultParam.cpp  TestCheck2DefaultParams.cpp  TestCheckDontReportFile.cpp  TestCheckLevel1.cpp  TestCheckLevel3.cpp  TestCheckLevel3Assert.cpp  TestCheckReportFile.cpp  TestCombinedTypes.cpp  TestContext.cpp  TestDefaultGroup.cpp  TestDefaultOptionalAction.cpp  TestDisabled.cpp  TestEnabled.cpp  TestExpressions.cpp  TestFilters.cpp  (+35 more)
wxgui/: ModAssertF.xpm  ModAssertS.xpm  ModAssertWxGui-10.0.vcxproj  ModAssertWxGui-7.1.vcproj  ModAssertWxGui-8.0.vcproj  ModAssertWxGui-9.0.vcproj  ModAssertWxGui.dsp  README  wxcurrentdirectory.cpp  wxdisplayer.cpp  wxdlg.cpp  wxfreememory.cpp  wxhandler.cpp  wxlog.cpp  wxosversion.cpp  wxprocessid.cpp  wxsyserror.cpp  wxterminatemessage.cpp  wxthreadid.cpp  wxwarningmessage.cpp
(+16 files in other folders)
