nobase_include_HEADERS = modassert/assert.hpp modassert/ifsuccess.hpp modassert/parmlist.hpp \
	modassert/strmlog.hpp modassert/context.hpp modassert/group.hpp modassert/grouplst.hpp \
	modassert/levels.hpp modassert/threads.hpp modassert/handler.hpp modassert/info.hpp \
	modassert/timeinfo.hpp modassert/responder.hpp modassert/filters.hpp \
	modassert/hook.hpp modassert/logger.hpp modassert/response.hpp modassert/autoresponder.hpp \
	modassert/categories.hpp modassert/category.hpp modassert/categorybase.hpp \
	modassert/combine_groups.hpp modassert/report_data.hpp modassert/report_type.hpp \
	modassert/result.hpp modassert/properties.hpp modassert/consoledisplayer.hpp \
	modassert/consolehandler.hpp modassert/wxdisplayer.hpp modassert/wxdlg.hpp \
	modassert/wxthreadid.hpp modassert/wxhandler.hpp modassert/wxlog.hpp \
	modassert/infouser.hpp modassert/logtype.hpp modassert/wxprocessid.hpp \
	modassert/wxcurrentdirectory.hpp modassert/wxfreememory.hpp modassert/wxosversion.hpp \
	modassert/wxsyserror.hpp modassert/appinfo.hpp modassert/linkcore.hpp \
	modassert/version.hpp modassert/infostore.hpp modassert/assertd.hpp \
	modassert/wxassert.hpp modassert/verifyv.hpp modassert/hold_ref.hpp \
	modassert/use_bool.hpp modassert/terminate_message.hpp modassert/warning_message.hpp \
	modassert/consoleterminate.hpp modassert/consolewarning.hpp \
	modassert/wxwarningmessage.hpp modassert/wxterminatemessage.hpp \
	modassert/responder_switcher.hpp
